--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bulma": "^0.7.5",
+    "dotenv-webpack": "^1.7.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^5.0.1"
   }
 }
