--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack-dev-server --mode=development",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "deploy": "gh-pages -d ./dist"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +16,10 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
     "copy-webpack-plugin": "^5.0.1",
+    "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
@@ -37,10 +39,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cliff-Conolly/sei-javadrip.git"
+    "url": "git+https://github.com/tomtidswell/sei-javadrip.git"
   },
   "bugs": {
-    "url": "https://github.com/Cliff-Conolly/sei-javadrip/issues"
+    "url": "https://github.com/tomtidswell/sei-javadrip/issues"
   },
-  "homepage": "https://github.com/Cliff-Conolly/sei-javadrip#readme"
+  "homepage": "https://tomtidswell.github.io/sei-javadrip"
 }
